--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -3,12 +3,13 @@
 <div class="jumbotron text-center">
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">You've Discoverd My Secret!</h1>
+    <h1 class="display-3">You've Discovered My Secret!</h1>
     <p class="secret-text">Jack Bauer is my hero.</p>
     <hr />
-    <a class="btn btn-light btn-lg" href="/logout" rol="button">Log out</a>
+
+    <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
     <a class="btn btn-dark btn-lg" href="/submit" role="button"
-      >Submit a secret</a
+      >Submit a Secret</a
     >
   </div>
 </div>
