--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -12,7 +12,7 @@
           type="text"
           class="form-control text-center"
           name="secret"
-          placeholder="What's your secret"
+          placeholder="What's your secret?"
         />
       </div>
       <button type="submit" class="btn btn-dark">Submit</button>
